# the-foundry

./: .dockerignore  .env.example  .env.sample  .gitattributes  .gitignore  DEBUG.md  Dockerfile  HACKATHON.md  IDEAS.md  Makefile  README.AGENT.md  README.INTTESTS.md  README.TESTS.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  task-25-execution.md
agent/: agent.py
aider/: agent.py
code/: .aider.model.metadata.json  hello.py
design_handoff_foundry_observability/: Foundry Tasks.html  README.md  components.jsx  icons.jsx  styles.css
docker/: entrypoint.sh
docs/: ARCHITECTURE.md
examples/: foundry-mcp-config.json
scripts/: add-and-process.sh
specs/: WORKLOG.md
tests/: test_agent_event_context.py  test_agent_stages.py  test_agents_base.py  test_agents_claude_cli.py  test_agents_codex_cli.py  test_agents_config.py  test_agents_factory.py  test_agents_opencode_cli.py  test_agents_stub.py  test_api.py  test_api_sse.py  test_automations_registry.py  test_bus.py  test_characterization_automations.py  test_coding_agent_runner.py  test_config.py  test_context.py  test_context_stage.py  test_core.py  test_events.py  test_fetch.py  test_implement.py  test_integration.py  test_listener_cron.py  test_listener_github_issues.py  test_listener_github_pr_review.py  test_mcp_config.py  test_mcp_runner.py  test_mcp_server.py  test_mcp_server_skills.py  test_orchestrator.py  test_orchestrator_integration.py  test_orchestrator_pr_review.py  test_pipeline.py  test_pr_feedback.py  test_pr_sanity.py  test_pr_worktree.py  test_projections.py  (+25 more)
(+218 files in other folders)
