[project]
name = "foundry"
version = "0.1.0"
description = "The Foundry — orchestrator for agentic feature pipelines (Hacker Sprint #1)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "aider-chat>=0.72.0",
]

[project.scripts]
foundry = "foundry.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foundry"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
