[project]
name = "foundry"
version = "0.1.0"
description = "The Foundry — orchestrator for agentic feature pipelines (Hacker Sprint #1)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "langfuse>=4.5.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
    "fastmcp>=3.2.4",
]

[project.scripts]
foundry = "foundry.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foundry"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.24",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
